--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,8 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "mongodb": "^5.5.0",
+    "mongoose": "^7.1.1",
     "morgan": "~1.9.1",
     "openai": "^3.2.1"
   }
