Embedding and summarize theoretically works

--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "@octokit/core": "^4.2.0",
     "axios": "^1.4.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
