--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
     "@octokit/core": "^4.2.0",
     "axios": "^1.4.0",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^16.0.3",
     "express": "~4.16.1",
