--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@octokit/core": "^4.2.0",
+    "@zilliz/milvus2-sdk-node": "^2.2.10",
     "axios": "^1.4.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
