--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "mongodb": "^5.5.0",
     "mongoose": "^7.1.1",
     "morgan": "~1.9.1",
-    "openai": "^3.2.1"
+    "openai": "^3.2.1",
+    "uuid": "^9.0.0"
   }
 }
